<resources>
    <string name="app_name">RoadFarmer</string>
    <string name="facebook_app_id">139877583262667</string>

    <string name="saved_language_selection">EN</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_account">My Account</string>
    <string name="title_activity_change">Change info</string>
    <string name="title_activity_create">Create location</string>

    <string name="toast_loggedOut">You are now signed out</string>
    <string name="toast_notLoggedIn">You were not signed in</string>
    <string name="toast_loginSucces">Login successful</string>
    <string name="toast_loginFail">Login Unsuccessful</string>
    <string name="toast_mapShowing">Map is already showing</string>
    <string name="toast_accountShowing">Account is already showing</string>
    <string name="toast_registerShowing">Register is already showing</string>
    <string name="toast_loginShowing">Login is already showing</string>
    <string name="toast_createShowing">You are already in the process</string>
    <string name="toast_changeShowing">You are already in the process</string>

    <string name="openStr">Open</string>
    <string name="closeStr">Close</string>

    <string name="navStr_map">Map</string>
    <string name="navStr_login">Login</string>
    <string name="navStr_register">Register</string>
    <string name="nav_userTitle">User</string>
    <string name="navStr_user">My User</string>
    <string name="navStr_create">Create Selling Location</string>
    <string name="navStr_change">Change created location</string>
    <string name="navStr_singout">Sign out</string>

    <string name="login_emailHint">Email Address</string>
    <string name="login_passHint">Password</string>
    <string name="login_passForgotText">Forgotten your password?\nClick here</string>

    <string name="register_emailHint">Email Address</string>
    <string name="register_emailRepeat">Repeat Email</string>
    <string name="register_passHint">Password</string>
    <string name="register_passRepeat">Repeat Password</string>
    <string name="register_btnTxt">Register</string>

    <string name="account_nameTxt">Name: </string>
    <string name="account_phoneTxt">Phone: </string>
    <string name="account_mailTxt">Email: </string>
    <string name="account_sellingLocTxt">Show your selling location</string>

    <string name="create_roadHint">Road</string>
    <string name="create_noHint">No.</string>
    <string name="create_zipHint">Zip</string>
    <string name="create_cityHint">City</string>
    <string name="create_addSellingText">Add items for sale at your location</string>
    <string name="create_customItemHint">This is only shown when other selected above</string>
    <string name="create_descriptionHint">This where you write a bit about why you sell what you sell. If it is homegrown, how you grow it and what kinds of fertilizer you use.</string>
    <string name="create_createBtnText">Create</string>

    <string name="dialog_newValueHint">Enter new value</string>
    <string name="dialog_changeBtnTxt">Change</string>
    <string name="dialog_cancelBtnTxt">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_noGoingBack">No going back!</string>
    <string name="dialog_adding">Adding: </string>


    <string-array name="listSettingSelection">
        <item>Choose one</item>
        <item>Help</item>
        <item>Settings</item>
        <item>About</item>
        <item>Sign out</item>
    </string-array>

    <string-array name="listLanguages">
        <item>Languages</item>
        <item>EN</item>
        <item>DA</item>
        <item>NO</item>
        <item>SV</item>
        <item>NL</item>
    </string-array>

    <string-array name="listOverallCategory">
        <item>Choose one</item>
        <item>All</item>
        <item>Berries</item>
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Meat</item>
        <item>Other</item>
    </string-array>

    <string-array name="listSpecificFruits">
        <item>Choose one</item>
        <item>Apples</item>
        <item>Pears</item>
        <item>Plums</item>
        <item>Oranges</item>
        <item>Other</item>
    </string-array>

    <string-array name="listSpecificBerries">
        <item>Choose one</item>
        <item>Cherries</item>
        <item>Blueberries</item>
        <item>Raspberries</item>
        <item>Strawberries</item>
        <item>Other</item>
    </string-array>

    <string-array name="listSpecificVeggies">
        <item>Choose one</item>
        <item>Peas</item>
        <item>Veggie 2</item>
        <item>Veggie 3</item>
        <item>Veggie 4</item>
        <item>Other</item>
    </string-array>

    <string-array name="listSpecificMeats">
        <item>Choose one</item>
        <item>Fresh</item>
        <item>Frost</item>
        <item>Other</item>
    </string-array>


</resources>
