<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_kort2"
        android:icon="@drawable/map_black"
        android:title="@string/navStr_map" />

    <item android:title="@string/nav_userTitle">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/account_icon_circle"
                android:title="@string/navStr_user" />

            <item
                android:id="@+id/nav_create"
                android:icon="@drawable/create_icon"
                android:title="@string/navStr_create" />

            <item
                android:id="@+id/nav_change"
                android:icon="@drawable/change_icon"
                android:title="@string/navStr_change" />

            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/logout_icon"
                android:title="@string/navStr_singout" />
        </menu>
    </item>

</menu>