<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_drawerLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar"
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/action_bar">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editEmail1"
                            android:layout_marginTop="75dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:hint="@string/register_emailHint"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:backgroundTint="@android:color/black"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editEmail2"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:hint="@string/register_emailRepeat"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:backgroundTint="@android:color/black"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editPassword1"
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:hint="@string/register_passHint"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimary"
                            android:backgroundTint="@android:color/black"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editPassword2"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:hint="@string/register_passRepeat"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHighlight="@color/colorPrimary"
                            android:backgroundTint="@android:color/black"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/registerBtn"
                            android:layout_marginTop="60dp"
                            android:layout_marginBottom="0dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:textStyle="bold"
                            android:text="@string/register_btnTxt"
                            android:textSize="40dp"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"/>

                    </LinearLayout>

                </ScrollView>


            </RelativeLayout>


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/register_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/navigation_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/closeNavBar3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:src="@drawable/backbtn"
                android:scaleType="fitStart"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>