<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_drawerLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar"
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_below="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/action_bar">

                <ImageView
                    android:id="@+id/create_imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerInside"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/uk_flag_icon"/>

                <EditText
                    android:id="@+id/create_editRoad"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/create_imageView"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:singleLine="true"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:hint="@string/create_roadHint"/>

                <EditText
                    android:id="@+id/create_editNo"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/create_imageView"
                    android:layout_below="@+id/create_editRoad"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:hint="@string/create_noHint"/>

                <EditText
                    android:id="@+id/create_editZip"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/create_editNo"
                    android:layout_below="@+id/create_editRoad"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:singleLine="true"
                    android:layout_alignParentRight="true"
                    android:inputType="number"
                    android:hint="@string/create_zipHint"/>

                <EditText
                    android:id="@+id/create_editCity"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/create_imageView"
                    android:layout_below="@+id/create_editNo"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentRight="true"
                    android:singleLine="true"
                    android:inputType="text"
                    android:hint="@string/create_cityHint"/>

                <Button
                    android:id="@+id/create_addImgBtn"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/create_editNo"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="0dp"
                    android:layout_alignParentLeft="true"
                    android:textAllCaps="false"
                    android:text="+" />

                <Button
                    android:id="@+id/create_getLocBtn"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/create_editNo"
                    android:layout_toRightOf="@+id/create_addImgBtn"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="20dp"
                    android:textAllCaps="false"
                    android:text="->" />

                <TextView
                    android:id="@+id/create_addSellingItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/create_editCity"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:text="@string/create_addSellingText"/>

                <TextView
                    android:id="@+id/create_addedItemText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/create_addSellingItems"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:text="No items selected yet"/>


                <ImageView
                    android:id="@+id/create_itemView1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:layout_below="@+id/create_addedItemText"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/uk_flag_icon"/>

                <ImageView
                    android:id="@+id/create_itemView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:layout_below="@+id/create_addedItemText"
                    android:layout_toRightOf="@+id/create_itemView1"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/dk_flag_icon"/>

                <ImageView
                    android:id="@+id/create_itemView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:layout_below="@+id/create_addedItemText"
                    android:layout_toRightOf="@+id/create_itemView2"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/sv_flag_icon"/>

                <ImageView
                    android:id="@+id/create_itemView4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:layout_below="@+id/create_addedItemText"
                    android:layout_toRightOf="@+id/create_itemView3"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/no_flag_icon"/>

                <ImageView
                    android:id="@+id/create_itemView5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerInside"
                    android:layout_below="@+id/create_addedItemText"
                    android:layout_toRightOf="@+id/create_itemView4"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/nl_flag_icon"/>

                <EditText
                    android:id="@+id/create_addCustomItems"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/create_itemView1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:singleLine="true"
                    android:hint="@string/create_customItemHint"/>

                <EditText
                    android:id="@+id/create_editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/create_addCustomItems"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/create_descriptionHint"
                    />

                <Button
                    android:id="@+id/create_createLocBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/create_editDescription"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="90dp"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:text="@string/create_createBtnText"
                    />


            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/create_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/navigation_menu_two">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/create_closeNavBar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:src="@drawable/backbtn"
                android:scaleType="fitStart"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>